# omfolio

./: .gitignore
client_example/: README.md  package-lock.json  package.json
client_example/src/: App.vue
client_example/src/components/: ArticleBlock.vue
client_example/src/router/: index.js
client_example/src/views/: BlogPost.vue  Home.vue
content/: __init__.py
content/blog/: example-blog.md  example.md  vue-introduction-2.md  vue-introduction.md
content/notes/: English.md  Math.md  code.md  filler.md
content/projects/: article1.md  article2.md  article3.md
server/: configmodule.py  env_vars.sh  pyproject.toml
server/api/: __init__.py  flaskdatabase.db
server/api/Article/: article_logic.py  article_model.py  article_routes.py
server/api/Tag/: tag_model.py
server/api/Tags_Article/: tag_article_table.py
server/renderer/: __init__.py  md_render.py
server/scripts/: package-lock.json  package.json  render-code.js  render-math.js
